<resources>
    <string name="app_name">Flags</string>
    <string name="flags">Flags</string>
    <string name="capitals">Capitals</string>
    <string name="and">&#160;and&#160;</string>
    <string name="guess_the">Guess The&#160;</string>
    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <string name="flag_a">Flag 1</string>
    <string name="flag_b">Flag 2</string>
    <string name="_0">0</string>
    <string name="to">:</string>
    <string name="number_of_wrong_answers">Number of wrong answers</string>
    <string name="number_of_right_answers">Number of right answers</string>
    <string name="the_flag">The flag</string>
    <string name="first_choice">First choice</string>
    <string name="second_choice">Second choice</string>
    <string name="third_choice">Third choice</string>
    <string name="fourth_choice">Fourth choice</string>
    <string name="guest">Guest</string>
    <string name="flags_and_capitals">Flags and Capitals</string>
    <string name="back_to_menu">Back to game</string>
    <string name="you_did_it">You dit it</string>
</resources>
