<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Menu">

        <TextView
            android:id="@+id/guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="53dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/new_comic_title"
            android:gravity="center"
            android:text="@string/guess_the"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/country"
            android:layout_width="347dp"
            android:layout_height="81dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="16dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/menu_button"
            android:fontFamily="@font/new_comic_title"
            android:gravity="center"
            android:text="@string/country"
            android:textAlignment="center"
            android:onClick="flagToCapitalMode"
            android:textAllCaps="false"
            android:textColor="#370617"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess"/>

        <Button
            android:id="@+id/capital"
            android:layout_width="347dp"
            android:layout_height="81dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/menu_button"
            android:fontFamily="@font/new_comic_title"
            android:gravity="center"
            android:onClick="flagToCapitalMode"
            android:text="@string/capital"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#370617"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country"/>

        <Button
            android:id="@+id/flag1"
            android:layout_width="347dp"
            android:layout_height="81dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/menu_button"
            android:fontFamily="@font/new_comic_title"
            android:gravity="center"
            android:onClick="countryToFlagMode"
            android:text="@string/flag_a"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#370617"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capital"/>

        <Button
            android:id="@+id/flag2"
            android:layout_width="347dp"
            android:layout_height="81dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/menu_button"
            android:fontFamily="@font/new_comic_title"
            android:gravity="center"
            android:onClick="capitalToFlagMode"
            android:text="@string/flag_b"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#370617"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flag1"/>

</androidx.constraintlayout.widget.ConstraintLayout>